samples/_failures_safe/1761369736_fcae09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f396b442.c: In function ‘scan_string’:
./samples/SAFE/__tmp_f396b442.c:139:5: error: expected declaration or statement at end of input
  139 |     return 0;
      |     ^~~~~~
